--- a/tutorials/use_corpora.ipynb
+++ b/tutorials/use_corpora.ipynb
@@ -1110,35 +1110,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(Rule('030', 'NOUN', 'NN', [(Pos([-3, -2, -1]),'DET')]),\n",
-       " Rule('031', 'DET', 'AT', [(Pos([1, 2, 3]),'NN')]),\n",
-       " Rule('043', '.', ',', [(Word([0]),',')]),\n",
-       " Rule('031', 'ADP', 'IN', [(Pos([1, 2, 3]),'AT')]),\n",
-       " Rule('031', 'ADP', 'IN', [(Pos([1, 2, 3]),None)]),\n",
-       " Rule('041', 'CONJ', 'CC', [(Word([-1, 0]),'and')]),\n",
-       " Rule('031', 'DET', 'AT', [(Pos([1, 2, 3]),None)]),\n",
-       " Rule('030', 'ADJ', 'JJ', [(Pos([-3, -2, -1]),'AT')]),\n",
-       " Rule('030', None, 'NN', [(Pos([-3, -2, -1]),'AT')]),\n",
-       " Rule('031', 'ADP', 'IN', [(Pos([1, 2, 3]),'NOUN')]),\n",
-       " Rule('030', 'NOUN', 'NN', [(Pos([-3, -2, -1]),'IN')]),\n",
-       " Rule('030', 'VERB', 'VBN', [(Pos([-3, -2, -1]),'VERB')]),\n",
-       " Rule('041', 'PRT', 'TO', [(Word([-1, 0]),'to')]),\n",
-       " Rule('031', 'PRON', 'PPSS', [(Pos([1, 2, 3]),'VERB')]),\n",
-       " Rule('041', 'VERB', 'BEZ', [(Word([-1, 0]),'is')]),\n",
-       " Rule('030', 'ADP', 'IN', [(Pos([-3, -2, -1]),'NN')]),\n",
-       " Rule('031', 'VERB', 'MD', [(Pos([1, 2, 3]),'VBN')]),\n",
-       " Rule('031', 'ADV', 'RB', [(Pos([1, 2, 3]),'AT')]),\n",
-       " Rule('030', 'ADJ', 'JJ', [(Pos([-3, -2, -1]),'IN')]),\n",
-       " Rule('043', '.', '``', [(Word([0]),'``')]))"
+       "(Rule('006', None, 'NOUN', [(Pos([-3, -2, -1]),'DET')]),\n",
+       " Rule('007', None, 'NOUN', [(Pos([1, 2, 3]),'.')]),\n",
+       " Rule('007', None, 'NOUN', [(Pos([1, 2, 3]),'ADP')]),\n",
+       " Rule('007', None, 'NOUN', [(Pos([1, 2, 3]),'VERB')]),\n",
+       " Rule('001', 'PRT', 'ADP', [(Pos([1]),'DET')]),\n",
+       " Rule('007', None, 'VERB', [(Pos([1, 2, 3]),'NOUN')]),\n",
+       " Rule('000', 'NOUN', 'VERB', [(Pos([-1]),'PRON')]),\n",
+       " Rule('017', 'NOUN', 'VERB', [(Word([-1, 0]),'to')]),\n",
+       " Rule('019', 'ADJ', 'ADV', [(Word([0]),'only')]),\n",
+       " Rule('019', 'NOUN', 'ADJ', [(Word([0]),'human')]),\n",
+       " Rule('001', 'PRT', 'ADP', [(Pos([1]),'PRON')]),\n",
+       " Rule('019', 'ADP', 'PRT', [(Word([0]),'all')]),\n",
+       " Rule('009', 'NOUN', 'VERB', [(Pos([-2]),'VERB'), (Pos([-1]),'ADV')]),\n",
+       " Rule('010', 'NOUN', 'ADJ', [(Pos([1]),'NOUN'), (Pos([2]),'ADP')]),\n",
+       " Rule('018', 'NOUN', 'PRON', [(Word([0, 1]),'Him')]),\n",
+       " Rule('008', 'VERB', 'NOUN', [(Pos([-1]),'DET'), (Pos([1]),'ADP')]),\n",
+       " Rule('018', 'ADJ', 'ADV', [(Word([0, 1]),'more')]),\n",
+       " Rule('011', 'NOUN', 'VERB', [(Word([-1]),'be')]),\n",
+       " Rule('010', 'VERB', 'NOUN', [(Pos([1]),'CONJ'), (Pos([2]),'NOUN')]),\n",
+       " Rule('010', 'NOUN', 'VERB', [(Pos([1]),'PRON'), (Pos([2]),'ADP')]))"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
