--- a/tutorials/use_corpora.ipynb
+++ b/tutorials/use_corpora.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "В этой тетрадке описываются некоторые полезные функции, позволяющие работать с корпусами, доступными из nltk, и пользовательскими корпусами.\n",
-    "Желательно заранее создать папку с текстовыми файлами (хотя бы одним) или использовать [файлы из репозитория]().\n",
+    "Желательно заранее создать папку с текстовыми файлами (хотя бы одним) или использовать [файлы из репозитория](https://github.com/named-entity/nltk4russian/tree/master/data).\n",
     "\n",
     "<span style=\"color:red\">*NB!*</span> Не забудьте сохранить файлы в кодировке utf-8 на Windows."
    ]
