--- a/tutorials/pymorphy2.ipynb
+++ b/tutorials/pymorphy2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Морфологический анализ с использование pymorphy2"
+    "## Морфологический анализ с использованием pymorphy2"
    ]
   },
   {
