--- a/tutorials/Affix tagger.ipynb
+++ b/tutorials/Affix tagger.ipynb
@@ -201,10 +201,10 @@
     }
    ],
    "source": [
-    "with open('media_train.tab', encoding = 'utf-8', mode='r') as f:\n",
+    "with open('../data/media_train.tab', encoding = 'utf-8', mode='r') as f:\n",
     "    sents_train = list(read_corpus_to_nltk(f))\n",
     "\n",
-    "with open('media_test.tab', encoding = 'utf-8', mode='r') as r:\n",
+    "with open('../data/media_test.tab', encoding = 'utf-8', mode='r') as r:\n",
     "    sents_test = list(read_corpus_to_nltk(r))\n",
     "    \n",
     "words_stats(sents_train, name = \"sents_train\")\n",
@@ -313,10 +313,10 @@
     }
    ],
    "source": [
-    "with open('media_train.tab', encoding = 'utf-8', mode='r') as f:\n",
+    "with open('../data/media_train.tab', encoding = 'utf-8', mode='r') as f:\n",
     "    sents_train = list(read_corpus_to_nltk(f))\n",
     "\n",
-    "with open('media_test.tab', encoding = 'utf-8', mode='r') as r:\n",
+    "with open('../data/media_test.tab', encoding = 'utf-8', mode='r') as r:\n",
     "    sents_test = list(read_corpus_to_nltk(r))\n",
     "\n",
     "rmv_irr_tokens(sents_train) #Удаляем все слова, кроме {'GRND', 'ADJS', 'VERB', 'PRED', 'INFN', 'COMP', 'ADVB', 'ADJF', 'NOUN'}\n",
@@ -421,10 +421,10 @@
     }
    ],
    "source": [
-    "with open('media_train.tab', encoding = 'utf-8', mode='r') as f:\n",
+    "with open('../data/media_train.tab', encoding = 'utf-8', mode='r') as f:\n",
     "    sents_train = list(read_corpus_to_nltk(f))\n",
     "\n",
-    "with open('media_test.tab', encoding = 'utf-8', mode='r') as r:\n",
+    "with open('../data/media_test.tab', encoding = 'utf-8', mode='r') as r:\n",
     "    sents_test = list(read_corpus_to_nltk(r))\n",
     "\n",
     "rmv_irr_tokens(sents_train)\n",
@@ -491,7 +491,7 @@
     "\n",
     "cool_list  = [\"Хурма\", \"термос\", \"глокая\", \"куздра\", \"самовар\", \"варенька\", \"этот\", \"соль\"]\n",
     "\n",
-    "with open('media_train.tab', encoding = 'utf-8', mode='r') as f:\n",
+    "with open('../data/media_train.tab', encoding = 'utf-8', mode='r') as f:\n",
     "    sents_train = list(read_corpus_to_nltk(f))\n",
     "\n",
     "#Полный морф разбор\n",
